fix z-index issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,13 @@ html {
   background: #222;
 }
 
+body, div, img, svg {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: opacity 0.1666s, color 0.1666s, background-color 0.1666s, fill 0.1666s;
+  transition: opacity 0.1666s, color 0.1666s, background-color 0.1666s, fill 0.1666s;
+}
+
 body {
   overflow: hidden;
   background: #eee;
@@ -72,13 +79,6 @@ svg[aria-hidden="true"] {
   opacity: 0;
 }
 
-div, img, svg {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transition: opacity 0.1666s;
-  transition: opacity 0.1666s;
-}
-
 .player__overlay {
   width: 20%;
   height: 20%;
@@ -91,11 +91,12 @@ div, img, svg {
   -ms-transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  z-index: 4;
+  z-index: 5;
 }
 
 .player__overlay-image {
-  cursor: pointer
+  cursor: pointer;
+  z-index: 4;
 } 
 
 /*player controls*/
@@ -104,7 +105,8 @@ div, img, svg {
   bottom: 0;
   height: 40px;
   width: 100%;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.5);
+  z-index: 3;
 }
 
 .controls__play-pause,
@@ -153,10 +155,6 @@ svg {
 .controls__scrub > input {
   width: 100%;
   position: relative;
-}
-
-img.player__target {
-  z-index: 3;
 }
 
 .controls__player-close {
